# aws-cost-reporter

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  pytest.ini  renovate.json  tox.ini
app/: reporter.py
app/tests/: test_reporter.py
app/tests/manifests/: test_accounts.yaml
tests/: test_accounts.yaml  test_reporter.py
