[tool.poetry]
name = "aws-cost-reporter"
version = "0.1.0"
description = "Report WAS costs to slack"
authors = ["Meni Yakove <myakove@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"

packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.8"
setuptools = "^69.0.3"
click = "^8.1.7"
requests = "*"
boto3 = "^1.34.74"
flask = "^3.0.2"
pyaml-env = "^1.2.1"
croniter = "^2.0.3"
python-simple-logger = "^1.0.19"
pyhelper-utils = "^0.0.12"

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"


[tool.poetry.group.tests.dependencies]
pytest-mock = "^3.14.0"
pytest = "^8.1.1"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
