[tool.poetry]
name = "aws-cost-reporter"
version = "0.1.0"
description = "Report WAS costs to slack"
authors = ["Meni Yakove <myakove@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"

packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.8"
setuptools = "^75.0.0"
click = "^8.1.7"
requests = "*"
boto3 = "^1.34.74"
flask = "^3.0.2"
pyaml-env = "^1.2.1"
croniter = "^4.0.0"
python-simple-logger = "^1.0.19"
pyhelper-utils = "^0.0.44"

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"

[tool.coverage.run]
omit = ["app/tests/*"]

[tool.coverage.report]
fail_under = 60
skip_empty = true

[tool.coverage.html]
directory = ".tests_coverage"

[tool.poetry.group.tests.dependencies]
pytest-mock = "^3.14.0"
pytest = "^8.1.1"
pytest-cov = "^5.0.0"

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
warn_unused_ignores = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
